--- a/test.css
+++ b/test.css
@@ -1,3 +1,5 @@
+
+
 a#cRetour{
   border-radius:3px;
   padding:10px;
@@ -36,21 +38,40 @@ a#cRetour.cVisible
 
 html,body {
   height:100%;
+  width: 250%;
   margin:0;
   font-family: 'Roboto';
+  
+
 
 
 }
 
-.content {
-  height:100%;
-  min-height:100%;
+#menu{
+  position: fixed;
 }
+body{
+  overflow-x : hidden;
+  overflow-y: hidden;
+  
+
+}
+
+.content{
+  float: left;
+  height: 100%;
+  min-height: 100%;
+}
+
 
 
 .smalltext{
   padding-top: 5px;
   font-size: 16px;
+}
+
+button {
+    position: fixed;
 }
 
 #countdown
@@ -91,10 +112,11 @@ ul.countdown li:last-child
   }
 
 #section1 {
-  background: url("couleur.jpg");
+  background: url("couleur.png");
   background-repeat: no-repeat;
   background-size: cover;
-  width:100%;
+  background-attachment: fixed;
+  width:16.5%;
   text-align: center;
   vertical-align: middle;
   display: inline-block;
@@ -103,36 +125,11 @@ ul.countdown li:last-child
   align-items: center;
   font-size:6em;
   color: white;
+  z-index: 1;
+    height: 100%;
+    min-height: 100%;
 }
 
-#section2 {
-  background-color: #c6c3bd;
-  font-size:6em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#section3 {
-  background-color: #d6d3ce;
-  font-size:6em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#section4 {
-  background-color: #eeeeee;
-  font-size:6em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#section5 {
-  background-color: #ffffff;
-  font-size:6em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+#section1 img{
+  width: 20%;
 }
